# -evolver

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  COMPLIANCE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  EVOLUTION.md  INTEGRATIONS.md  LICENSE  MODERN_TUI_GUIDE.md  README.md  SPEC.md  SYSTEM_PROMPT.md  TUI_README.md  USER_GUIDE.md  docker-compose.yml  install-nsis.ps1  package-lock.json  pyproject.toml  requirements.txt  run_server.py  start.py  test_16888.py  test_api.py  test_api_config.py  test_api_config_bob.py  test_backend.py  test_chat.py  test_chat_async.py  test_chat_auth.py  test_cli.py  test_connect.py  test_deps.py  test_direct_chat.py  test_evolver.py  test_health_cache.py  test_http.py  (+10 more)
.github/workflows/: ci-cd.yml  development.yml
evolver/: __init__.py  runtime_env.py  server.py  tui_modern.py
evolver/agent/: __init__.py  agent_profiles.py  manager.py  run_agent.py  session_store.py
evolver/config/: __init__.py  defaults.py  loader.py
evolver/mcp/: __init__.py  client.py  server.py
evolver/memory/: __init__.py  hybrid_search.py  memory_layer.py  privacy_filter.py  sqlite_store.py  vector_store.py
evolver/providers/: __init__.py  adapter.py  router.py
evolver/skills/: __init__.py  skill_approval.py  skill_executor.py  skill_manager.py  (+2 more)
frontend/: .env  .env.example  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
monitoring/: __init__.py  config.py  health_check.py  monitor.py
scripts/: http_chat_demo.py  setup-venv.ps1  smoke_test_server.py  verify-env.ps1
(+19 files in other folders)
